Bug 1459711: Ensure that navigation.performance.type is 2 when restoring a document from the session history. r=bzbarsky

Differential Revision: https://phabricator.services.mozilla.com/D39551

--HG--
extra : moz-landing-system : lando